[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/aseprite/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/aseprite/play-button.png" type="Texture" id=3]
[ext_resource path="res://assets/aseprite/title.png" type="Texture" id=4]
[ext_resource path="res://assets/aseprite/option-button.png" type="Texture" id=5]
[ext_resource path="res://assets/aseprite/leaderboard-button.png" type="Texture" id=6]
[ext_resource path="res://assets/aseprite/option-button-pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/aseprite/leaderboard-button-pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/aseprite/play-button-pressed.png" type="Texture" id=9]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 116.0
margin_top = 103.0
margin_right = 209.0
margin_bottom = 122.0
focus_neighbour_bottom = NodePath("../OptionButton")
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="."]
margin_left = 116.0
margin_top = 124.0
margin_right = 208.0
margin_bottom = 142.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../LeaderboardButton")
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="TextureButton" parent="."]
margin_left = 116.071
margin_top = 144.758
margin_right = 208.071
margin_bottom = 164.758
focus_neighbour_top = NodePath("../OptionButton")
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="PlayButton" to="." method="_on_PlayButton_focus_entered"]
[connection signal="focus_exited" from="PlayButton" to="." method="_on_PlayButton_focus_exited"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="focus_entered" from="OptionButton" to="." method="_on_OptionButton_focus_entered"]
[connection signal="focus_exited" from="OptionButton" to="." method="_on_OptionButton_focus_exited"]
[connection signal="pressed" from="OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="focus_entered" from="LeaderboardButton" to="." method="_on_LeaderboardButton_focus_entered"]
[connection signal="focus_exited" from="LeaderboardButton" to="." method="_on_LeaderboardButton_focus_exited"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
